tests-build/tests/fail/macros_invalid_input.stderr
error: the `async` keyword is missing from the function declaration
 --> $DIR/macros_invalid_input.rs:6:1
  |
6 | fn main_is_not_async() {}
  | ^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`, `crate`
 --> $DIR/macros_invalid_input.rs:8:15
  |
8 | #[tokio::main(foo)]
  |               ^^^

error: Must have specified ident
  --> $DIR/macros_invalid_input.rs:11:15
   |
11 | #[tokio::main(threadpool::bar)]
   |               ^^^^^^^^^^^^^^^

error: the `async` keyword is missing from the function declaration
  --> $DIR/macros_invalid_input.rs:15:1
   |
15 | fn test_is_not_async() {}
   | ^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`, `crate`
  --> $DIR/macros_invalid_input.rs:17:15
   |
17 | #[tokio::test(foo)]
   |               ^^^

error: Unknown attribute foo is specified; expected one of: `flavor`, `worker_threads`, `start_paused`, `crate`
  --> $DIR/macros_invalid_input.rs:20:15
   |
20 | #[tokio::test(foo = 123)]
   |               ^^^^^^^^^

error: Failed to parse value of `flavor` as string.
  --> $DIR/macros_invalid_input.rs:23:24
   |
23 | #[tokio::test(flavor = 123)]
   |                        ^^^

error: No such runtime flavor `foo`. The runtime flavors are `current_thread` and `multi_thread`.
  --> $DIR/macros_invalid_input.rs:26:24
   |
26 | #[tokio::test(flavor = "foo")]
   |                        ^^^^^

error: The `start_paused` option requires the `current_thread` runtime flavor. Use `#[tokio::test(flavor = "current_thread")]`
  --> $DIR/macros_invalid_input.rs:29:55
   |
29 | #[tokio::test(flavor = "multi_thread", start_paused = false)]
   |                                                       ^^^^^

error: Failed to parse value of `worker_threads` as integer.
  --> $DIR/macros_invalid_input.rs:32:57
   |
32 | #[tokio::test(flavor = "multi_thread", worker_threads = "foo")]
   |                                                         ^^^^^

error: The `worker_threads` option requires the `multi_thread` runtime flavor. Use `#[tokio::test(flavor = "multi_thread")]`
  --> $DIR/macros_invalid_input.rs:35:59
   |
35 | #[tokio::test(flavor = "current_thread", worker_threads = 4)]
   |                                                           ^

error: Failed to parse value of `crate` as path.
  --> $DIR/macros_invalid_input.rs:38:23
   |
38 | #[tokio::test(crate = 456)]
   |                       ^^^

error: Failed to parse value of `crate` as path: "456"
  --> $DIR/macros_invalid_input.rs:41:23
   |
41 | #[tokio::test(crate = "456")]
   |                       ^^^^^

error: second test attribute is supplied
  --> $DIR/macros_invalid_input.rs:45:1
   |
45 | #[test]
   | ^^^^^^^

error: duplicated attribute
  --> $DIR/macros_invalid_input.rs:45:1
   |
45 | #[test]
   | ^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/macros_invalid_input.rs:1:9
   |
1  | #![deny(duplicate_macro_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
